--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="header">
     <section class="about">
       <a href="/">
-        <img src="../../assets/img/je.png" alt="{{site.url}}">
+        <img src="{{site.url}}/assets/img/je.png" alt="{{site.url}}">
       </a>
       <h1>جواد علمی</h1>
       <!--<p>توسعه‌دهنده رابط کاربری</p>-->
