--- a/_layouts/blog_by_tag.html
+++ b/_layouts/blog_by_tag.html
@@ -32,6 +32,6 @@ layout: default
             {% endif %}
         {% endfor %}
     {% else %}
-        <p>There are no posts for this tag.</p>
+        <p>پستی در این تگ نیست</p>
     {% endif %}
 </div>
