--- a/_layouts/blog_by_category.html
+++ b/_layouts/blog_by_category.html
@@ -3,8 +3,8 @@ layout: default
 ---
 
 <header id="post-header">
-    <h1 id="post-title">{{ page.category }}</h1>
-    <h4 id="post-subtitle">Articles by category</h4>
+    <h1 id="post-title">{{ page.category.title }}</h1>
+    <h4 id="post-subtitle">مجموعه مقالات</h4>
 </header>
 
 <div id="post-content">
