--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
       <a href="/">
         <img src="{{site.url}}/assets/img/je.png" alt="{{site.url}}">
       </a>
-      <h1>جواد علمی</h1>
+      <h1>فاطمه زنگوئی</h1>
       <!--<p>توسعه‌دهنده رابط کاربری</p>-->
       <a href="#" class="nav-menu menu-open"><span class="menu-btn"></span></a>
       <nav class="nav nav-list">
