--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  <p>Copyright &copy;&nbsp;{{ site.time | date: '%Y' }} Javad Elmi</p>
+  <p>Copyright &copy;&nbsp;{{ site.time | date: '%Y' }} fatemeh zangouie</p>
 </footer>
 <script src="{{ site.url }}/assets/components/jquery/jquery.min.js"></script>
 <script src="{{ site.url }}/assets/js/scripts.min.js"></script>
