--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,14 +12,14 @@
     <script src="{{ site.url }}/assets/components/modernizr/modernizr.min.js"></script>
 
     <meta property="og:url" content="http://elmi-javad.ir{% if page.url %}{{ page.url }}{% else %}{{ site.url }}{% endif %}">
-    <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}جواد علمی{% endif %}">
+    <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}فاطمه زنگوئی{% endif %}">
     <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 360 }}{% else %}{{ site.description }}{% endif %}">
     <meta property="og:image" content="{% if page.imglink %}{{ page.imglink }}{% else %}{{ site.url }}/assets/img/fb.png {% endif %}">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@_Karamii">
     <meta name="twitter:domain" content="hosseinkarami.com">
-    <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}جواد علمی{% endif %}">
+    <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}فاطمه زنگوئی{% endif %}">
     <meta name="twitter:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 360 }}{% else %}{{ site.description }}{% endif %}">
     <meta name="twitter:image:src" content="{% if page.imglink %}{{ page.imglink }}{% else %}{{ site.url }}/assets/img/fb.png {% endif %}">
 
