--- a/_includes/headers.html
+++ b/_includes/headers.html
@@ -1,12 +1,10 @@
 
-
-
 <header class="header">
     <section class="about">
       <a href="/">
-        <img src="{{site.url}}/assets/img/hk.png" alt="Hossein Karami">
+        <img src="{{site.url}}/assets/img/hk.png" alt="Fatemeh zangouie">
       </a>
-      <h1>حسین کرمی</h1>
+      <h1>فاطمه زنگوئی</h1>
       <p>توسعه‌دهنده رابط کاربری</p>
       <a href="#" class="nav-menu menu-open"><span class="menu-btn"></span></a>
       <nav class="nav nav-list">
