--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -62,7 +62,7 @@ layout: blog
     (function () {  // DON'T EDIT BELOW THIS LINE
         var d = document, s = d.createElement('script');
 
-        s.src = '//elmijavadir.disqus.com/embed.js';
+        s.src = '//fzangouie.disqus.com/embed.js';
 
         s.setAttribute('data-timestamp', +new Date());
         (d.head || d.body).appendChild(s);
