--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,13 +22,13 @@
               </div>
             </a>
           </li>
-         <!-- <li>{% if site.github %}
+          <li>{% if site.github %}
             <a href="https://github.com/{{ site.github }}" target="_blank">
               <div class="center waves-effect waves-side">
                 <h4 class="middle">گیت‌هاب</h4>
               </div>
             </a>{% endif %}
-          </li>-->
+          </li>
         </ul>
       </nav>
     </section>
