--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -2,12 +2,9 @@
 <html>
   {% include head.html %}
   <body>
-  {% include header.html %}
-  <main class="main">
-    <section class="container">
-      {{ content }}
-    </section>
-  </main>
-  {% include footer.html %}
+    <div class="biography" style="width:40%; text-align:center;margin:0 0 0 30%">
+        {{ content }}
+    </div>
+     {% include footer.html %}
   </body>
 </html>
